2015-July-06 Struan Robertson

    * MesmerILT.cpp: Minor change to reduce inconsistency from incorrect mass assignment.

	* UnitTest.cpp: Added test of Gamma function.

	* Dafaults.xml: Added default time units for experimental trace input.

2015-June-22 Struan Robertson

    * gstructure.cpp: Fix for internal rotation alignment bug.

2015-June-09 Struan Robertson

    * PseudoIsomerization.cpp/.h: Altered modified prior distribution allow for fitting
	of order parameter.

2015-June-07 Struan Robertson

    * PseudoIsomerization.cpp/.h: Added modified prior distribution to account for non-
	excitation of spectator modes.

    * AnalyticalRepresentation.cpp: Set Max temperature in order to prevent unnecessary 
	re-calculation of densities of state.

2015-May-30 Struan Robertson

    * System.h, Documentation: Version changes.

    * HinderedRotorQM1D.cpp: Added sine kinetic energy terms for angle dependent internal
	moment of rotation.

2015-May-06 Chris Morley

    Fix the use of the internal units (cm-1) when derivedFrom used
    in association with a units= attribute, as reported by Robin.

    * src/Rdouble.cpp,src/Rdouble.h:Add a m_units member to hold the internal units and convert 
    addand in Rdouble::SetUpLinkedVars() (when the value of both m_units is known.)

    * src/gDensityOfStates.cpp: initialize the m_units for ZPE.

    * src/plugins/ExponentialDown.cpp: initialize m_units for m_deltaEDown,
    although cm-1 is currently assumed and is unchecked.

2015-May-04 Struan Robertson

	* MESMER manual.docx: Documentation updates.

2015-May-04 Struan Robertson

	* SensitivityAnalysis.cpp: Improved appearance of data generated for external
	analysis.

2015-May-03 Struan Robertson

	* SensitivityAnalysis.cpp: Fixed incorrect vector allocation that was causing
	a crash.

	* IsomerizationReaction.cpp: Altered calculation of high pressure rate 
	coefficients to improve accuracy.

	* CollisionOperator.cpp: Minor change to data output.
	